--- a/css/style.css
+++ b/css/style.css
@@ -16,3 +16,19 @@
     height: 300px;
 
 }
+.bg{
+    background-image: url(../assets/prbg.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+   
+}
+.shadow{
+    
+    
+    border: 2px  rgb(0, 17, 255);
+    box-shadow: 0px 5px 10px 2px rgba(255, 0, 255, 0.393);
+    background-color: rgba(127, 255, 212, 0.345);
+
+    
+
+}
